[package]

name = "collect"
version = "0.0.14"
license = "MIT/Apache-2.0"
description = "An experimental extension of std::collections"
authors = ["Alexis Beingessner <a.beingessner@gmail.com>",
           "Sebastian Gesemann <s.gesemann@gmail.com>",
           "Jonathan Reem <jonathan.reem@gmail.com>"]

repository = "https://github.com/Gankro/collect-rs"
homepage = "https://github.com/Gankro/collect-rs"
documentation = "http://Gankro.github.io/collect-rs/collect"
keywords = ["data-structures"]
readme = "README.md"

[dependencies]
traverse = "*"



# FIXME rust-lang/rust#20127: Refreshing ICE

[profile.dev]
debug = false

[profile.test]
debug = false
