[package]

name = "collect"
version = "0.0.25"
license = "MIT/Apache-2.0"
description = "An experimental extension of std::collections"
authors = ["Alexis Beingessner <a.beingessner@gmail.com>",
           "Sebastian Gesemann <s.gesemann@gmail.com>",
           "Jonathan Reem <jonathan.reem@gmail.com>"]

repository = "https://github.com/Gankro/collect-rs"
homepage = "https://github.com/Gankro/collect-rs"
documentation = "http://Gankro.github.io/collect-rs/collect"
keywords = ["data-structures"]
readme = "README.md"

[features]
default = ["blist", "enum_set", "immut_slist", "interval_heap",
           "linked_hash_map", "lru_cache", "tree_map", "trie_map",
       	   "compare", "proto", "string_joiner", "ordered_iter"]
blist = ["proto"]
enum_set = []
immut_slist  = []
interval_heap = ["compare"]
linked_hash_map = []
lru_cache = ["linked_hash_map"]
tree_map = ["compare"]
trie_map = []
compare = []
proto = []
string_joiner = []
ordered_iter = []

[dependencies.traverse]
optional = true

[dev-dependencies]
rand = "*"
threadpool = "*"

[profile.dev]
debug = false
